--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,7 @@
   font-family: "Open Sans", sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  font-size: inherit;
 }
 
 html,
@@ -88,7 +89,6 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
