--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,7 +2,10 @@
   font-family: "Open Sans", sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  font-size: inherit;
+  -moz-osx-font-smoothing: grayscale;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
 }
 
 html,
@@ -106,7 +109,7 @@ section {
   display: block;
 }
 body {
-  line-height: 1;
+  line-height: 1.2;
   margin: 0;
 }
 ol,
