--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,10 +1,9 @@
 * {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Nunito", sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
-  text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
 }
 
